objects/IDEXX_Domain_Values__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Cost_Center_For_Rep__c</fullName>
        <label>Default Cost Center For Rep</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>IDEXX Domain Values</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDEXX Domain Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>